Updated the slider event form EventScroll to EvtScroll and fixed a layout bug in the video player

--- a/core/video.css
+++ b/core/video.css
@@ -1,4 +1,7 @@
 /* VIDEO.JS CSS FILE */
+.c3_video_container {
+    background-color: RGB(0,0,0);
+}
 .c3_video_container video{
     width:100%;
     height: -moz-calc(100% - 3.125em);
@@ -22,13 +25,15 @@
 .c3_video_icon_bg {
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('video_icons.svg');
-    background-size: 12.5em 9.375em;
+    background-image: url('video_icons.svg'), -moz-radial-gradient(center center, circle contain, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background-size: 12.5em 9.375em, 100% 100%;
 }
 .c3_video_controls {
     width:100%;
     height: 3.125em;
     background-color: RGB(20,20,20);
+    box-shadow: inset 0 1px 1px RGB(40,40,40);
+    overflow: hidden;
 }
 
 .c3_video_controls > div {
@@ -59,6 +64,7 @@
    background-color: RGB(120,120,120);
 }
 .c3_video_progress {
+    float: left;
     margin: 0.625em;
     width: -moz-calc(100% - 14.375em);
     border-radius: 0.1875em;
@@ -74,7 +80,7 @@
  }
 
 .c3_video_duration {
-    float:right;
+    float: left;
     border-radius: 0.1875em;
     margin: 0.625em;
     height: 1.875em;
@@ -88,6 +94,7 @@
     font-family: "Arial";
     font-weight: normal;
     font-size: 1.25em;
+    max-width: 100%;
 }
 
 @-moz-keyframes c3_video_anim_rotate {
